--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ Quality by default: built-in testing, code reviews, and observability.</p></span
     <a href="https://discord.com/invite/QpKnRjCrUm" style="color: #f92672; text-decoration: none;">Discord</a>
   </p>
   <p style="margin-top: 0.4rem; font-size: 0.8rem; color: #666;">
-    Тема: <a href="https://github.com/vividvilla/ezhil" style="color: #999; text-decoration: none;">Ezhil</a> · Сайт создан с <a href="https://gohugo.io" style="color: #999; text-decoration: none;">Hugo</a>
+    Тheme: <a href="https://github.com/vividvilla/ezhil" style="color: #999; text-decoration: none;">Ezhil</a> · Built with <a href="https://gohugo.io" style="color: #999; text-decoration: none;">Hugo</a>
   </p>
 
 
@@ -180,7 +180,7 @@ Quality by default: built-in testing, code reviews, and observability.</p></span
   els.forEach((el, idx)=>{
     const txt = el.dataset.text || '';
     if (!txt) return;
-    
+   
     setTimeout(()=>type(el, txt), 400 * idx + 800);
   });
 })();
