--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
 
 <style>
 
+
+
 .header, .header + .container.wrapper, .header + main, body > .container.wrapper {
   margin-top: 0 !important;
   padding-top: 0 !important;
@@ -267,7 +269,7 @@ Start via project games on <strong>KD Box / AI Aimbot</strong>. (think it will b
 
 
 <section id="contact">
-  <h2>Create a project</h2>
+  <h2>To build your system</h2>
 
   <form class="project-form">
     <label>Name*</label>
