--- a/index.html
+++ b/index.html
@@ -39,7 +39,12 @@
 
 <meta name="description" content="Leading software development company specializing in innovative mobile apps, web platforms, and digital solutions.">
 
-<meta name="yandex-verification" content="312ac6b44371319d" />
+
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    </head>
+    <body>Verification: 312ac6b44371319d</body>
+
 
 <style>
 
