--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
     <img src="https://upload.wikimedia.org/wikipedia/commons/1/19/C_Logo.png" alt="C" width="48" height="48">
   </a>
   <a href="https://isocpp.org/" target="_blank" title="C++">
-    <img src="https://isocpp.org/assets/images/cpp_logo.png" alt="C++" width="48" height="48">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/1/18/ISO_C++_Logo.svg" alt="C++" width="48" height="48">
   </a>
   <a href="https://learn.microsoft.com/en-us/dotnet/csharp/" target="_blank" title="C#">
     <img src="https://learn.microsoft.com/en-us/media/logos/logo-ms-social.svg" alt="C#" width="48" height="48">
