--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 <hr>
 <div class="how-we-work">
   <div class="how-header">
-    <h3>How work ?</h3>
+   How work ?
     <div class="indicator">
       <div class="bar"></div>
       <span>Calm, consistent output</span>
