--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           <span class="description"><p>About me ?</p>
 <p>Software project manager with interests in reverse engineering, AI, computer vision and neural networks.</p>
 <hr>
-<p>Capabilities &amp; Stack</p>
+<p>Price &amp; Service</p>
 <p>Let&rsquo;s consider my price range. I&rsquo;m not a low-cost performer, and the first thing you should understand is that what you&rsquo;re paying for is hand-crafted code.</p>
 <p>I&rsquo;m considering deals where you can pay for my time by the hour, and that will cost around <strong>$75/hour</strong>.</p>
 <blockquote>
