--- a/index.html
+++ b/index.html
@@ -1615,7 +1615,7 @@
 			<div class="why-us-card" role="listitem">
 				<div class="why-us-icon" aria-hidden="true"><i class="fa fa-star"></i></div>
 				<h3 data-i18n="whyus.card3.title">Client Success Stories</h3>
-				<p data-i18n="whyus.card3.desc">Join satisfied clients who trust us to deliver results.</p>
+				<p data-i18n="whyus.card3.desc">Join the satisfied customers who trust us.</p>
 			</div>
 
 			<div class="why-us-card" role="listitem">
@@ -1717,7 +1717,7 @@
 				"whyus.card2.title": "Seamless Integration",
 				"whyus.card2.desc": "Connect your systems effortlessly with robust APIs and smooth data flow.",
 				"whyus.card3.title": "Client Success Stories",
-				"whyus.card3.desc": "Join satisfied clients who trust us to deliver results.",
+				"whyus.card3.desc": "Join the satisfied customers who trust us.",
 				"whyus.card4.title": "Since 2018",
 				"whyus.card4.desc": "Working digital projects with a large audience that used the app every day."
 			},
@@ -1728,7 +1728,7 @@
 				"whyus.card2.title": "Беспрепятственная интеграция",
 				"whyus.card2.desc": "Подключайте системы без сложностей с помощью надёжных API и гладкого потока данных.",
 				"whyus.card3.title": "Истории успеха клиентов",
-				"whyus.card3.desc": "Присоединяйтесь довольным клиентам, которые нам доверяют.",
+				"whyus.card3.desc": "Присоединяйтесь к довольным клиентам, которые нам доверяют.",
 				"whyus.card4.title": "С 2018 года",
 				"whyus.card4.desc": "Рабочие цифровые проекты с большой аудиторией, которая использовала приложение каждый день."
 			}
